--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@react-router/serve": "^7.5.3",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.13",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
