--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "axios": "^1.11.0",
     "framer-motion": "^12.23.24",
     "isbot": "^5.1.27",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.3",
-    "tw-elements": "^2.0.0"
+    "tw-elements": "^2.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
